# typeset-py

./: .gitignore  .gitmessage  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  pyproject.toml  setup.py  typeset.pyi
.github/: dependabot.yml
.github/workflows/: CI.yml  dependabot-auto-merge.yml  quality.yml  release.yml
docs/context/: README.md  api-design.md  architecture.md  build-system.md  development-workflow.md  dsl-grammar.md
src/: layout.pest  lib.rs  parser.rs
typeset/: doc.py  dsl.py
