[package]
name = "typeset-py"
description = "A DSL for defining source code pretty printers"
version = "2.0.6"
edition = "2021"
authors = ["Soren Norbaek <sorennorbaek@gmail.com>"]
homepage = "https://docs.rs/typeset/latest/typeset/"
repository = "https://github.com/soren-n/typeset-py"
documentation = "https://docs.rs/typeset/latest/typeset/"
keywords = ["dsl", "pretty", "printer"]
categories = ["compilers", "template-engine"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "typeset"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
pest = "2.7.9"
pest_derive = "2.7.9"
pyo3 = "0.20.3"
pyo3-log = "0.9.0"
typeset = "2.0.4"
