[package]
name = "typeset-py"
description = "A DSL for defining source code pretty printers"
version = "2.0.8"
edition = "2021"
authors = ["Soren Norbaek <sorennorbaek@gmail.com>"]
homepage = "https://docs.rs/typeset/latest/typeset/"
repository = "https://github.com/soren-n/typeset-py"
documentation = "https://docs.rs/typeset/latest/typeset/"
keywords = ["dsl", "pretty", "printer"]
categories = ["compilers", "template-engine"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "typeset"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
pest = "2.8.0"
pest_derive = "2.8.0"
pyo3 = "0.24.1"
pyo3-log = "0.12.3"
typeset = "2.0.5"
